vlib/v/checker/tests/array_pop_immutable_err.vv
fn main() {
	a := [1,2,3]
	dump(a)

	a.pop()
	dump(a)
}
